--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,9 @@
 kotlin.code.style=official
 
+coroutinesVersion=1.6.4
+kotestVersion=5.4.1
 ktorVersion=2.0.3
 logbackVersion=1.2.11
-kotestVersion=5.4.1
-coroutinesVersion=1.6.4
+mockkVersion=1.12.4
+
 
