feat: Replaced the multiplatform "make-adapter" with JVM specific "common" and solved the issue with updating of blueprint's modules.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 kotlin.code.style=official
 
 coroutinesVersion=1.6.4
+jacksonVersion=2.13.3
 kotestVersion=5.4.1
 ktorVersion=2.0.3
 logbackVersion=1.2.11
