--- a/server/src/main/resources/specs/api.yml
+++ b/server/src/main/resources/specs/api.yml
@@ -30,6 +30,18 @@ paths:
         
         The `blueprint` can be passed as either a correctly escaped JSON string, or you can also provide a Base64-encoded value.
 
+        ```
+        curl -X POST \
+        http://localhost:8080/v1/scenarios \
+        -H 'content-type: application/json' \
+        -H 'x-auth-token: YOUR_AUTH_TOKEN' \
+        -d '{
+          "teamId": 1,
+          "folderId": 2,
+          "blueprint": "{ \"name\": \"Empty integration\", \"flow\": [ { \"id\": 2, \"module\": \"json:ParseJSON\", \"version\": 1, \"metadata\": { \"designer\": { \"x\": -46, \"y\": 47, \"messages\": [ { \"category\": \"last\", \"severity\": \"warning\", \"message\": \"A transformer should not be the last module in the route.\" } ] } } } ], \"metadata\": { \"version\": 1, \"scenario\": { \"roundtrips\": 1, \"maxErrors\": 3, \"autoCommit\": true, \"autoCommitTriggerLast\": true, \"sequential\": false, \"confidential\": false, \"dataloss\": false, \"dlq\": false }, \"designer\": { \"orphans\": [ ] } } }"
+        }'
+        ```
+
       operationId: "createScenarioV1"
       parameters:
         - name: body
@@ -55,8 +67,19 @@ paths:
     patch:
       tags:
         - Scenarios
-      summary: Update a scenario.
-      description: "Updates a scenario by uploading of a new or updated blueprint"
+      description: |
+        Updates a scenario by uploading of a new or updated blueprint.
+        
+        ```
+        curl -X PATCH \
+        http://localhost:8080/v1/scenarios/1 \
+        -H 'content-type: application/json' \
+        -H 'x-auth-token: YOUR_AUTH_TOKEN' \
+        -d '{
+          "blueprint": "{ \"name\": \"Updated scenario\", \"flow\": [ { \"id\": 2, \"module\": \"json:ParseJSON\", \"version\": 1, \"metadata\": { \"designer\": { \"x\": -46, \"y\": 47, \"messages\": [ { \"category\": \"last\", \"severity\": \"warning\", \"message\": \"A transformer should not be the last module in the route.\" } ] } } } ], \"metadata\": { \"version\": 1, \"scenario\": { \"roundtrips\": 1, \"maxErrors\": 3, \"autoCommit\": true, \"autoCommitTriggerLast\": true, \"sequential\": false, \"confidential\": false, \"dataloss\": false, \"dlq\": false }, \"designer\": { \"orphans\": [ ] } } }"
+        }'
+        ```
+
       operationId: "updateScenarioV1"
       parameters:
         - in: path
@@ -88,8 +111,16 @@ paths:
     get:
       tags:
         - Scenarios
-      summary: Get scenario's blueprint.
-      description: "Download the blueprint (scenario definition) as a JSON string."
+      description: |
+        Download the blueprint (scenario definition) as a JSON string.
+        
+        ```
+        curl -X GET \
+        http://localhost:8080/v1/scenarios/1/blueprint \
+        -H 'content-type: application/json' \
+        -H 'x-auth-token: YOUR_AUTH_TOKEN'
+        ```
+
       operationId: "getScenarioBlueprintV1"
       parameters:
         - in: path
@@ -107,8 +138,35 @@ paths:
     put:
       tags:
         - Scenarios
-      summary: Set module data.
-      description: "Updates a specific module in a scenario"
+      description: |
+        Updates a specific module in a scenario.
+        
+        ```
+        curl -X PUT \
+        http://localhost:8080/v1/scenarios/471310/data \
+        -H 'content-type: application/json' \
+        -H 'x-auth-token: YOUR_AUTH_TOKEN' \
+        -d '{
+          "modules": [
+            {
+              "moduleId": 9,
+              "key": "value",
+              "value": "{{5.greeting}}"
+            },
+            {
+              "moduleId": 12,
+              "key": "value",
+              "value": "{{5.greeting}}"
+            },
+            {
+              "moduleId": 13,
+              "key": "json",
+              "value": "hello world!"
+            }
+          ]
+        }'
+        ```
+
       operationId: "setModuleDataV1"
       parameters:
         - in: path
