--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,8 @@
 # See: https://circleci.com/docs/2.0/language-java/
 version: 2
 
+orbs:
+  codecov: codecov/codecov@3.2.3
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
@@ -44,3 +46,6 @@ jobs:
 
       # run tests!
       - run: gradle test
+
+      # upload the code coverage report
+      - run: codecov/upload
