--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
+      - codecov/upload
 
       # Download and cache dependencies
       - restore_cache:
@@ -46,6 +47,3 @@ jobs:
 
       # run tests!
       - run: gradle test
-
-      # upload the code coverage report
-      - run: codecov/upload
