Codecov custom param.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,4 +47,5 @@ jobs:
 
       # run tests!
       - run: gradle test
-      - codecov/upload -file "./build/reports/jacoco/testCodeCoverageReport/testCodeCoverageReport.xml"
+      - codecov/upload:
+        file: "./build/reports/jacoco/testCodeCoverageReport/testCodeCoverageReport.xml"
