--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,9 @@
 # Java Gradle CircleCI 2.0 configuration file
 # See: https://circleci.com/docs/2.0/language-java/
-version: 2
+version: 2.1
+
+orbs:
+  codecov: codecov/codecov@3.2.3
 
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
@@ -44,3 +47,5 @@ jobs:
 
       # run tests!
       - run: gradle test
+      - codecov/upload:
+        file: "./build/reports/jacoco/testCodeCoverageReport/testCodeCoverageReport.xml"
